# battery-monitor

./: .gitignore  Makefile  README.md  measurements.sqlite
sensor/: CMakeLists.txt  main.c
server/: main.ts
